--- a/package.json
+++ b/package.json
@@ -37,16 +37,20 @@
     "less": "^4.1.1",
     "less-loader": "^8.0.0",
     "lodash": "^4.17.21",
+    "multer": "^1.4.2",
     "postcss": "^8.2.6",
     "prop-types": "^15.7.2",
+    "qs": "^6.10.1",
     "react": "^17.0.1",
     "react-async": "^10.0.1",
     "react-daum-postcode": "^2.0.4",
     "react-dom": "^17.0.1",
     "react-scrollspy": "^3.4.3",
+    "recoil": "^0.2.0",
     "skeleton-elements": "^3.3.0",
     "swiper": "^6.4.14",
     "tailwindcss": "^2.0.3",
+    "uuid": "^3.4.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
