--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-scrollspy": "^3.4.3",
     "recoil": "^0.2.0",
     "skeleton-elements": "^3.3.0",
+    "socket.io-client": "^4.0.1",
     "swiper": "^6.4.14",
     "tailwindcss": "^2.0.3",
     "uuid": "^3.4.0",
