--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "qs": "^6.10.1",
     "react": "^17.0.1",
     "react-async": "^10.0.1",
+    "react-cookie": "^4.0.3",
     "react-daum-postcode": "^2.0.4",
     "react-dom": "^17.0.1",
     "react-scrollspy": "^3.4.3",
